toolchains/eui-compiler/tests/error/baselines/duplicated-attribute/expect.txt
Error: `skins.GameMainSkin` has duplicated attribute: `height`
        height="1136" >
        ^
at line: 4, column: 9
at file: